<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="preview_label">Preview</string>
    <string name="action_create">Create</string>
    <string name="action_backup">Backup</string>
    <string name="action_restore">Restore</string>
    <string name="action_delete">Delete</string>
    <string name="action_reset">Reset</string>
    <string name="action_unlock">Unlock</string>
    <string name="action_lock">Lock</string>
    <string name="action_apply">Apply</string>
    <string name="action_customize">Customize</string>
    <string name="always_choice">Always</string>
    <string name="never_choice">Never</string>
    <string name="clipboard">Clipboard</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_copy">Copy</string>
    <string name="action_paste">Paste</string>
    <string name="action_done">Done</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="inverse_selection">Inverse selection</string>
    <string name="loading">Loading…</string>
    <string name="dismiss">Dismiss</string>
    <string name="download_update">Download update</string>
    <string name="install_update">Install update</string>
    <string name="view_changes">View changes</string>
    <string name="pro_updated">You\'re up-to-date!</string>
    <string name="changes_dialog_title">Updates</string>
    <string name="changes_dialog_error">Failed to load changes</string>
    <string name="changes_dialog_no_changes">No changes found</string>
    <string name="changes_dialog_build_format">Build #%1$d → #%2$d</string>
    <string name="changes_dialog_commit_info">by %1$s • %2$s • %3$s</string>
    <string name="time_just_now">just now</string>
    <string name="time_minutes_ago">%dm</string>
    <string name="time_hours_ago">%dh</string>
    <string name="time_days_ago">%dd</string>
    <string name="time_weeks_ago">%dw</string>
    <string name="time_months_ago">%dmo</string>
    <string name="time_years_ago">%dy</string>
    <string name="managed_by_lawnchair">Elyra default</string>
    <string name="smartspace_preferences">Preferences</string>
    <string name="settings_button_text">Home settings</string>
    <string name="system_settings">System settings</string>
    <string name="title_change_settings">Change settings</string>
    <string name="others_category_label">Others</string>
    <string name="dynamic">Dynamic</string>
    <string name="presets">Presets</string>
    <string name="custom">Custom</string>
    <string name="feed_default">Default</string>
    <string name="system">System</string>
    <string name="columns">Columns</string>
    <string name="rows">Rows</string>
    <string name="label">Label</string>
    <string name="icons">Icons</string>
    <string name="grid">Grid</string>
    <string name="layout">Layout</string>
    <string name="show_wallpaper">Show wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="style">Style</string>
    <string name="background_opacity">Background opacity</string>
    <string name="pref_all_apps_search_bar_background">Separated Search bar background</string>
    <string name="copied_toast">Copied to clipboard</string>
    <string name="calculator_search_result_copied_toast">Result copied to clipboard</string>
    <string name="item_removed">Item removed</string>
    <string name="google_folder_title" translatable="false">Google</string>
    <string name="what_to_show">What to show</string>
    <string name="wallpapers">Wallpapers</string>
    <string name="caddy_beta">Caddy (Beta)</string>
    <string name="caddy">Caddy</string>
    <string name="app_drawer_folder">App drawer folders</string>
    <string name="selected_apps">Selected apps</string>
    <string name="add_apps">Add apps</string>
    <string name="app_drawer_folder_settings">Drawer folder</string>
    <string name="add_folder">Create folder</string>
    <string name="edit_folder">Edit folder</string>
    <string name="add_label">Add</string>
    <string name="edit_label">Edit</string>
    <string name="apply_label">Apply</string>
    <string name="delete_label">Delete</string>
    <string name="folder_list_note">Swipe left to edit, swipe right to delete, or tap to update items</string>
    <string name="apps_in_folder_label">Hide folder apps</string>
    <string name="apps_in_folder_description">Apps assigned to folders are excluded from app lists</string>
    <string name="folders_filter_duplicates">Only show unique apps</string>
    <string name="my_folder_label">My folder</string>
    <string name="accessibility_service_description">To perform certain actions (such as locking your phone) when performing a gesture, Elyra Launcher requires accessibility access.

Elyra Launcher does not watch user actions, though this privilege is required for all accessibility services. Elyra Launcher discards events sent by the system.

To lock your phone or open the Recents screen, Elyra Launcher uses the performGlobalAction accessibility method.</string>
    <string name="iconPackPackageDefault" translatable="false">""</string>
    <string name="n_percent" translatable="false">%1$d%%</string>
    <string name="x_with_y_count">%1$s (%2$d)</string>
    <string name="x_by_y">%1$d x %2$d</string>
    <string name="x_and_y">%1$s &amp; %2$s</string>
    <string name="advanced">Advanced</string>
    <string name="reorderable_active_items">Active items</string>
    <string name="reorderable_disabled_items">Other items</string>
    <string name="reorderable_disabled_hint">Disabled items will appear here. Drag an item here or tap the remove button to make an item active.</string>
    <string name="reorderable_add_hint_items">Active items will appear here. Drag an item here or tap the add button to make an item active.</string>
    <string name="settings">Settings</string>
    <string name="general_label">Icons</string>
    <string name="general_description">Icon packs, labels, notification dots</string>
    <string name="home_screen_label">Home screen</string>
    <string name="home_screen_description">Feed, grid, icons</string>
    <string name="home_screen_actions">Home screen actions</string>
    <string name="dock_label">Dock</string>
    <string name="dock_description">Search bar, icon count</string>
    <string name="app_drawer_label">App drawer</string>
    <string name="app_drawer_description">Hidden apps, column count, icons</string>
    <string name="drawer_search_label">Search</string>
    <string name="drawer_search_description">App search, device results, web suggestions</string>
    <string name="folders_label">Folders</string>
    <string name="folders_description">Row and column count</string>
    <string name="gestures_label">Gestures</string>
    <string name="gestures_description">Taps and swipes</string>
    <string name="quickstep_label">ROM integration</string>
    <string name="quickstep_description">Privileged Recents options for ROM builds</string>
    <string name="about_label">About Elyra Launcher</string>
    <string name="app_info_drop_target_label">App info</string>
    <string name="debug_restart_launcher">Restart Elyra Launcher</string>
    <string name="experimental_features_label">Experimental features</string>
    <string name="font_picker_label">Font customization</string>
    <string name="font_picker_description">Some text remains unchanged</string>
    <string name="smartspace_calendar_label">At a Glance calendar customization</string>
    <string name="smartspace_calendar_description">Allow showing date in non-Gregorian calendar systems</string>
    <string name="workspace_increase_max_grid_size_label">Increase maximum grid size limit</string>
    <string name="workspace_increase_max_grid_size_description">Increase maximum allowed home screen grid size from 10 x 10 to 20 x 20</string>
    <string name="always_reload_icons_label">Always reload icons</string>
    <string name="always_reload_icons_description">Avoid using cached icons from icon packs</string>
    <string name="icon_swipe_gestures">Icon swipe gestures</string>
    <string name="icon_swipe_gestures_description">Perform actions when swiping left or right on icons instead of moving the home screen</string>
    <string name="show_deck_layout">Deck layout</string>
    <string name="show_deck_layout_description">Show a layout option to hide the app drawer and automatically add new apps to the home screen</string>
    <string name="gesturenavcontract_label">Use GestureNavContract API</string>
    <string name="gesturenavcontract_description">Support Android\'s enhanced animations when using gesture navigation. Not all devices support this. May cause animation bugs when in use.</string>
    <string name="recents_lock_unlock">Lock/unlock</string>
    <string name="recents_lock_unlock_description">Prevent selected app from closing when pressing \"Clear all\"</string>
    <string name="overlay_fade_in">Fade In</string>
    <string name="overlay_suck_in">Suck In</string>
    <string name="app_closing_animation">App closing animation</string>
    <string name="overlay_label">Overlay</string>
    <string name="overlay_none">None</string>
    <string name="set_default_launcher_tip">To access shortcuts and home features, set Elyra Launcher as your default launcher</string>
    <string name="notification_dots">Notification dots</string>
    <string name="show_notification_count">Show notification counter</string>
    <string name="notification_dots_color">Notification dot color</string>
    <string name="notification_dots_text_color">Notification counter color</string>
    <string name="notification_dots_color_contrast_warning_always">Warning: Notification dot and counter colors don\'t have enough contrast with each other</string>
    <string name="notification_dots_color_contrast_warning_sometimes">Warning: Notification dot and counter colors might not always have enough contrast with each other</string>
    <string name="icon_style_label">Icon style</string>
    <string name="icon_shape_label">Icon shape</string>
    <string name="icon_sizes">Icon size</string>
    <string name="show_labels">Show labels</string>
    <string name="label_size">Label size</string>
    <string name="twoline_label">Use multiple lines</string>
    <string name="transparent_background_icons_label">Transparent themed icons</string>
    <string name="transparent_background_icons_description">Use transparent background on themed icons</string>
    <string name="auto_adaptive_icons_label">Auto-adaptive icons</string>
    <string name="auto_adaptive_icons_description">For all non-adaptive icons</string>
    <string name="shadow_bg_icons_label">Show shadow behind icons</string>
    <string name="background_lightness_label">Background lightness</string>
    <string name="adaptive_icon_background_description">Use 100% background lightness for white</string>
    <string name="reset_custom_icons">Reset custom icons</string>
    <string name="reset_custom_icons_confirmation">All custom icons will be reset. Do you want to continue?</string>
    <string name="remove_all_views_from_home_screen">Clear home screen</string>
    <string name="remove_all_views_from_home_screen_desc">Home screen will be cleared. Do you want to continue?</string>
    <string name="icon_picker_default_category">Icons</string>
    <string name="icon_picker_reset_to_default">Reset to default</string>
    <string name="icon_pack_external_picker">Open external picker</string>
    <string name="search_bar_label">Search bar</string>
    <string name="label_lens">Google Lens</string>
    <string name="label_voice_search">Voice Search</string>
    <string name="search_input_action_clear_results">Clear search box</string>
    <string name="elyra_color_filter" tools:ignore="MissingTranslation">App color filter</string>
</resources>