<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2021, Lawnchair

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<app.lawnchair.allapps.AllAppsSearchInput xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_container_all_apps"
    android:layout_width="match_parent"
    android:layout_height="@dimen/search_box_container_height"
    android:clickable="true"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:focusable="true">

    <LinearLayout
        android:id="@+id/bottom_controls"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_box_height"
        android:layout_gravity="center"
        android:clipToPadding="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:id="@+id/search_field"
            android:layout_width="0dp"
            android:layout_height="@dimen/search_box_height"
            android:layout_weight="1"
            android:elevation="2dp"
            android:minWidth="120dp">

            <FrameLayout
                android:id="@+id/search_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/search_input_fg"
                android:clickable="false"
                android:focusable="true">

                <TextView
                    android:id="@+id/hint"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:ellipsize="end"
                    android:gravity="start|center_vertical"
                    android:letterSpacing="-0.01"
                    android:paddingStart="@dimen/search_box_height"
                    android:paddingEnd="@dimen/search_box_height"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="?android:textColorTertiary"
                    android:textSize="18sp" />

                <app.lawnchair.allapps.FallbackSearchInputView
                    android:id="@+id/input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:ellipsize="end"
                    android:focusableInTouchMode="true"
                    android:gravity="start|center_vertical"
                    android:imeOptions="actionGo|flagNoExtractUi"
                    android:inputType="textNoSuggestions"
                    android:letterSpacing="-0.01"
                    android:paddingStart="@dimen/search_box_height"
                    android:paddingEnd="@dimen/search_box_height"
                    android:privateImeOptions="bc_search"
                    android:scrollHorizontally="true"
                    android:singleLine="true"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorTertiary"
                    android:textSize="18sp" />
            </FrameLayout>

            <ImageButton
                android:id="@+id/search_icon"
                android:layout_width="@dimen/search_box_height"
                android:layout_height="@dimen/search_box_height"
                android:layout_gravity="start|center_vertical"
                android:background="@drawable/pill_ripple"
                android:clickable="true"
                android:contentDescription="@string/search_bar_label"
                android:scaleType="center"
                android:src="@drawable/ic_allapps_search"
                app:tint="?android:textColorSecondary" />

            <LinearLayout
                android:id="@+id/search_actions"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/search_box_height"
                android:layout_gravity="end|center_vertical"
                android:clipToPadding="false"
                android:orientation="horizontal"
                tools:ignore="RtlSymmetry">

                <app.lawnchair.qsb.AssistantIconView
                    android:id="@+id/mic_btn"
                    android:layout_width="@dimen/qsb_icon_width"
                    android:layout_height="@dimen/search_box_height"
                    android:background="@drawable/pill_ripple"
                    android:clickable="true"
                    android:contentDescription="@string/label_voice_search"
                    android:padding="@dimen/qsb_icon_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_remove_no_shadow"
                    app:tint="?android:textColorSecondary" />

                <ImageButton
                    android:id="@+id/lens_btn"
                    android:layout_width="@dimen/qsb_icon_width"
                    android:layout_height="@dimen/search_box_height"
                    android:background="@drawable/pill_ripple"
                    android:clickable="true"
                    android:contentDescription="@string/label_lens"
                    android:padding="@dimen/qsb_icon_padding"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_remove_no_shadow"
                    app:tint="?android:textColorSecondary" />

                <ImageButton
                    android:id="@+id/action_btn"
                    android:layout_width="@dimen/search_box_height"
                    android:layout_height="@dimen/search_box_height"
                    android:background="@drawable/pill_ripple"
                    android:clickable="true"
                    android:contentDescription="@string/search_input_action_clear_results"
                    android:scaleType="center"
                    android:src="@drawable/ic_remove_no_shadow"
                    app:tint="?android:textColorSecondary" />
            </LinearLayout>
        </FrameLayout>

        <ImageButton
            android:id="@+id/color_btn"
            android:layout_width="@dimen/search_box_height"
            android:layout_height="@dimen/search_box_height"
            android:layout_marginStart="@dimen/elyra_bottom_search_control_gap"
            android:background="@drawable/elyra_search_button_bg"
            android:clickable="true"
            android:contentDescription="@string/elyra_color_filter"
            android:elevation="2dp"
            android:minHeight="48dp"
            android:minWidth="48dp"
            android:padding="14dp"
            android:scaleType="fitCenter"
            android:src="@drawable/elyra_ic_color_wheel"
            android:visibility="gone" />
    </LinearLayout>

</app.lawnchair.allapps.AllAppsSearchInput>
